log/build_2023-11-13_20-35-35/teleop/stderr.log
  File "/home/william/ros2_ws/install/teleop/lib/python3.10/site-packages/teleop/joyListener.py", line 8
    import .motorController # Class with motor control functions
           ^
SyntaxError: invalid syntax

